@@ -15,6 +15,11 @@
 	src/notebook.cpp: <bits/wordsize.h> not found on OpenSolaris
 	Reported by Halton Huo <halton.huo@sun.com>
 	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=3
+	* configure.ac,
+	plugin/src/Makefile.am,
+	src/Makefile.am: -lutil not available on OpenSolaris
+	Reported by Halton Huo <halton.huo@sun.com>
+	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=4
 
 2010-03-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
